--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: mammamia
     ports:
       - "8080:8080"
-    env_file:
-      - .env
+    environment:
+      - TMDB_KEY= 
+      - PROXY= [""]
     restart: unless-stopped
